[tool.poetry]
name = "contact"
version = "0.1.0"
description = ""
authors = ["Vitalii-Mykhalchenko <swimming580@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
psycopg2 = "^2.9.9"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
fastapi = "^0.110.1"
sqlalchemy = "^2.0.29"
alembic = "^1.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
